Cleaning up button and FAB SCSS - Make sure as much as possible is behind optional classes - Rename everything to follow style convention - Add new class for JS binding - Rearrange SCSS to take advantage of nesting with & - Merge button and FAB demos

--- a/app/styleguide/button/demo.scss
+++ b/app/styleguide/button/demo.scss
@@ -2,7 +2,11 @@
 @import "../shadow/_shadow";
 @import "_button";
 
-.PaperButton {
+.wsk-button {
   margin-top: 24px;
   margin-bottom: 24px;
+}
+
+.wsk-button--fab {
+  margin-left: 8px;
 }
